Part B done
